--- a/philasher/src/App.css
+++ b/philasher/src/App.css
@@ -1,5 +1,12 @@
+body {
+  margin: 0;
+}
+
+
 .App {
-  text-align: center;
+  height: 100vh;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .App-logo {
@@ -7,13 +14,8 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
+  text-align: center;
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -28,11 +30,39 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.ParallaxImage {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover;
+  color: var(--color);
+  row-gap: 4rem;
+  text-align: center;
+}
+
+.Image1 {
+  background-image: url("../public/images/IMG-20220227-WA0006.jpg");
+}
+
+.Image2 {
+  background-image: url("../public/images/IMG-20220227-WA0001.jpg");
+}
+
+.MainContent {
+  font-size: 2rem;
+  padding: 2rem;
+  background-color: #333;
+  color: white;
+}
+
+.PadHeader {
+  padding-top: 1300px;
+}
+
+.navbar-brand {
+  text-align: center;
 }
