--- a/philasher/src/App.css
+++ b/philasher/src/App.css
@@ -7,6 +7,7 @@ body {
   height: 100vh;
   overflow-y: auto;
   overflow-x: hidden;
+  scroll-behavior: smooth;
 }
 
 .App-logo {
@@ -32,7 +33,7 @@ body {
 
 .ParallaxImage {
   display: flex;
-  min-height: 100vh;
+  min-height: 80vh;
   flex-direction: column;
   align-items: center;
   justify-content: center;
@@ -61,23 +62,25 @@ body {
 }
 
 .ParallaxHeader {
-  font-size: 3rem;
-  padding: 2rem;
+  font-size: 2vh;
+  padding-top: 4vh;
+  padding-bottom: 4vh;
   background-color: #333;
   color: white;
-  min-height: 10vh;
+  min-height: 8vh;
   max-height: 30vh;
   text-align: center;
   font-family: 'Noto Sans Mono', monospace;
 }
 
 .MainContent {
-  font-size: 3rem;
-  padding: 2rem;
+  font-size: 1.5vh;
+  padding: 1vh;
+  padding-top: 50px;
   background-color: #333;
   color: white;
-  min-height: 40vh;
-  max-height: 60vh;
+  min-height: 20vh;
+  max-height: 40vh;
   text-align: center;
   font-family: 'Noto Sans Mono', monospace;
 }
@@ -90,8 +93,32 @@ body {
 .ProjectImage {
   width: 100%;
   max-height: 80vh;
-  object-fit: cover;
+  object-fit: contain;
+  position: relative;
 }
+
+.BackgroundImage {
+  width: 100%;
+  height: 80vh;
+  object-fit: cover;
+  filter: blur(5px);
+  position: absolute;
+}
+
+.carousel-item {
+  position: relative;
+}
+
+.carousel-caption {
+  position: absolute;
+  background-color: #333;
+  color: white;
+  left: 50%;
+  margin: auto;
+  max-width: 50vh;
+  border-radius: 10px;
+}
+
 .navbar-brand {
   text-align: center;
 }
